# pkg/user_v1/user.pb.validate.go
@@ -794,6 +794,10 @@ func (m *User) validate(all bool) error {
 
 	// no validation rules for IsLocked
 
+	// no validation rules for Weight
+
+	// no validation rules for Height
+
 	if len(errors) > 0 {
 		return UserMultiError(errors)
 	}
@@ -2069,3 +2073,165 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = DeleteRequestValidationError{}
+
+// Validate checks the field values on SetAnthropometryRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *SetAnthropometryRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SetAnthropometryRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// SetAnthropometryRequestMultiError, or nil if none found.
+func (m *SetAnthropometryRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SetAnthropometryRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for UserId
+
+	if all {
+		switch v := interface{}(m.GetWeight()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, SetAnthropometryRequestValidationError{
+					field:  "Weight",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, SetAnthropometryRequestValidationError{
+					field:  "Weight",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetWeight()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return SetAnthropometryRequestValidationError{
+				field:  "Weight",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if all {
+		switch v := interface{}(m.GetHeight()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, SetAnthropometryRequestValidationError{
+					field:  "Height",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, SetAnthropometryRequestValidationError{
+					field:  "Height",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetHeight()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return SetAnthropometryRequestValidationError{
+				field:  "Height",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return SetAnthropometryRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// SetAnthropometryRequestMultiError is an error wrapping multiple validation
+// errors returned by SetAnthropometryRequest.ValidateAll() if the designated
+// constraints aren't met.
+type SetAnthropometryRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SetAnthropometryRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SetAnthropometryRequestMultiError) AllErrors() []error { return m }
+
+// SetAnthropometryRequestValidationError is the validation error returned by
+// SetAnthropometryRequest.Validate if the designated constraints aren't met.
+type SetAnthropometryRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SetAnthropometryRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SetAnthropometryRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SetAnthropometryRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SetAnthropometryRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SetAnthropometryRequestValidationError) ErrorName() string {
+	return "SetAnthropometryRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e SetAnthropometryRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSetAnthropometryRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SetAnthropometryRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SetAnthropometryRequestValidationError{}
